<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ControllerCadFunc">

    <TextView

        android:text="@string/nomeFunc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/idtxtnome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/cpfFunc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/idtxtcpf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/foneFunc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/idtxtfone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/salFunc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/idtxsalario"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/bonusFunc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/idtxtBonus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/btnsalvar"
        android:id="@+id/idBtnSalvar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/idListViewCadFunc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"></ListView>


</LinearLayout>
